<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="bottom"
        android:orientation="vertical"
        android:padding="30dp">

        <TextView
            android:id="@+id/input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-light"
            android:gravity="end"
            android:maxLines="3"
            android:textSize="30sp"
            tools:text="5+10-3" />

        <TextView
            android:id="@+id/output"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:gravity="end"
            android:maxLines="2"
            android:textSize="50sp"
            tools:text="12" />

    </LinearLayout>

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:stretchColumns="*">

        <TableRow tools:ignore="ExtraText">

            <Button
                android:id="@+id/button_clear"
                style="@style/Widget.MaterialComponents.Button"
                android:layout_width="wrap_content"
                android:layout_height="90dp"
                android:layout_margin="4dp"
                android:text="C" />

            <Button
                android:id="@+id/button_plus_minus"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="wrap_content"
                android:layout_height="90dp"
                android:layout_margin="4dp"
                android:text="+/-" />

            <Button
                android:id="@+id/button_backspace"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="wrap_content"
                android:layout_height="90dp"
                android:layout_margin="4dp"
                android:text="⌫" />


            <Button
                android:id="@+id/button_division"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="wrap_content"
                android:layout_height="90dp"
                android:layout_margin="4dp"
                android:text="÷" />

        </TableRow>

        <TableRow>

            <Button
                android:id="@+id/button_7"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="wrap_content"
                android:layout_height="90dp"
                android:layout_margin="4dp"
                android:text="7" />

            <Button
                android:id="@+id/button_8"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="wrap_content"
                android:layout_height="90dp"
                android:layout_margin="4dp"
                android:text="8" />

            <Button
                android:id="@+id/button_9"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="wrap_content"
                android:layout_height="90dp"
                android:layout_margin="4dp"
                android:text="9" />

            <Button
                android:id="@+id/button_multiply"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="wrap_content"
                android:layout_height="90dp"
                android:layout_margin="4dp"
                android:text="×" />

        </TableRow>

        <TableRow>

            <Button
                android:id="@+id/button_4"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="wrap_content"
                android:layout_height="90dp"
                android:layout_margin="4dp"
                android:text="4" />

            <Button
                android:id="@+id/button_5"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="wrap_content"
                android:layout_height="90dp"
                android:layout_margin="4dp"
                android:text="5" />

            <Button
                android:id="@+id/button_6"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="wrap_content"
                android:layout_height="90dp"
                android:layout_margin="4dp"
                android:text="6" />

            <Button
                android:id="@+id/button_subtraction"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="wrap_content"
                android:layout_height="90dp"
                android:layout_margin="4dp"
                android:text="-" />

        </TableRow>

        <TableRow>

            <Button
                android:id="@+id/button_1"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="wrap_content"
                android:layout_height="90dp"
                android:layout_margin="4dp"
                android:text="1" />

            <Button
                android:id="@+id/button_2"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="wrap_content"
                android:layout_height="90dp"
                android:layout_margin="4dp"
                android:text="2" />

            <Button
                android:id="@+id/button_3"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="wrap_content"
                android:layout_height="90dp"
                android:layout_margin="4dp"
                android:text="3" />

            <Button
                android:id="@+id/button_addition"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="wrap_content"
                android:layout_height="90dp"
                android:layout_margin="4dp"
                android:text="+" />

        </TableRow>

        <TableRow>

            <Button
                android:id="@+id/button_0"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="wrap_content"
                android:layout_height="90dp"
                android:layout_margin="4dp"
                android:text="0"
                android:layout_span="2" />

            <Button
                android:id="@+id/button_dot"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="wrap_content"
                android:layout_height="90dp"
                android:layout_margin="4dp"
                android:text="." />

            <Button
                android:id="@+id/button_equals"
                style="@style/Widget.MaterialComponents.Button"
                android:layout_width="wrap_content"
                android:layout_height="90dp"
                android:layout_margin="4dp"
                android:text="=" />

        </TableRow>

    </TableLayout>
</LinearLayout>