package com.example.mycalculator


import android.view.View
import android.view.ViewGroup
import androidx.test.espresso.Espresso.onView
import androidx.test.espresso.action.ViewActions.*
import androidx.test.espresso.assertion.ViewAssertions.*
import androidx.test.espresso.matcher.ViewMatchers.*
import androidx.test.ext.junit.rules.ActivityScenarioRule
import androidx.test.ext.junit.runners.AndroidJUnit4
import androidx.test.filters.LargeTest
import org.hamcrest.Description
import org.hamcrest.Matcher
import org.hamcrest.Matchers.allOf
import org.hamcrest.Matchers.`is`
import org.hamcrest.TypeSafeMatcher
import org.hamcrest.core.IsInstanceOf
import org.junit.Rule
import org.junit.Test
import org.junit.runner.RunWith

@LargeTest
@RunWith(AndroidJUnit4::class)
class CalculatorUITest {
    @Rule
    @JvmField
    var mActivityScenarioRule = ActivityScenarioRule(MainActivity::class.java)

    @Test
    fun testOne() {
        val materialButton = onView(
            allOf(
                withId(R.id.button_9), withText("9"),
                childAtPosition(
                    childAtPosition(
                        withClassName(`is`("android.widget.TableLayout")),
                        1
                    ),
                    2
                ),
                isDisplayed()
            )
        )
        materialButton.perform(click())

        val materialButton2 = onView(
            allOf(
                withId(R.id.button_addition), withText("+"),
                childAtPosition(
                    childAtPosition(
                        withClassName(`is`("android.widget.TableLayout")),
                        3
                    ),
                    3
                ),
                isDisplayed()
            )
        )
        materialButton2.perform(click())

        val materialButton3 = onView(
            allOf(
                withId(R.id.button_4), withText("4"),
                childAtPosition(
                    childAtPosition(
                        withClassName(`is`("android.widget.TableLayout")),
                        2
                    ),
                    0
                ),
                isDisplayed()
            )
        )
        materialButton3.perform(click())

        val materialButton4 = onView(
            allOf(
                withId(R.id.button_equals), withText("="),
                childAtPosition(
                    childAtPosition(
                        withClassName(`is`("android.widget.TableLayout")),
                        4
                    ),
                    2
                ),
                isDisplayed()
            )
        )
        materialButton4.perform(click())

        val textView = onView(
            allOf(
                withId(R.id.input), withText("9+4"),
                withParent(withParent(IsInstanceOf.instanceOf(android.widget.LinearLayout::class.java))),
                isDisplayed()
            )
        )
        textView.check(matches(withText("9+4")))

        val textView2 = onView(
            allOf(
                withId(R.id.output), withText("13"),
                withParent(withParent(IsInstanceOf.instanceOf(android.widget.LinearLayout::class.java))),
                isDisplayed()
            )
        )
        textView2.check(matches(withText("13")))
    }

    @Test
    fun testTwo() {
        val materialButton5 = onView(
            allOf(
                withId(R.id.button_8), withText("8"),
                childAtPosition(
                    childAtPosition(
                        withClassName(`is`("android.widget.TableLayout")),
                        1
                    ),
                    1
                ),
                isDisplayed()
            )
        )
        materialButton5.perform(click())

        val materialButton6 = onView(
            allOf(
                withId(R.id.button_subtraction), withText("-"),
                childAtPosition(
                    childAtPosition(
                        withClassName(`is`("android.widget.TableLayout")),
                        2
                    ),
                    3
                ),
                isDisplayed()
            )
        )
        materialButton6.perform(click())

        val materialButton7 = onView(
            allOf(
                withId(R.id.button_3), withText("3"),
                childAtPosition(
                    childAtPosition(
                        withClassName(`is`("android.widget.TableLayout")),
                        3
                    ),
                    2
                ),
                isDisplayed()
            )
        )
        materialButton7.perform(click())

        val materialButton8 = onView(
            allOf(
                withId(R.id.button_equals), withText("="),
                childAtPosition(
                    childAtPosition(
                        withClassName(`is`("android.widget.TableLayout")),
                        4
                    ),
                    2
                ),
                isDisplayed()
            )
        )
        materialButton8.perform(click())

        val textView3 = onView(
            allOf(
                withId(R.id.input), withText("8-3"),
                withParent(withParent(IsInstanceOf.instanceOf(android.widget.LinearLayout::class.java))),
                isDisplayed()
            )
        )
        textView3.check(matches(withText("8-3")))

        val textView4 = onView(
            allOf(
                withId(R.id.output), withText("5"),
                withParent(withParent(IsInstanceOf.instanceOf(android.widget.LinearLayout::class.java))),
                isDisplayed()
            )
        )
        textView4.check(matches(withText("5")))
    }

    @Test
    fun testThree() {
        val materialButton9 = onView(
            allOf(
                withId(R.id.button_2), withText("2"),
                childAtPosition(
                    childAtPosition(
                        withClassName(`is`("android.widget.TableLayout")),
                        3
                    ),
                    1
                ),
                isDisplayed()
            )
        )
        materialButton9.perform(click())

        val materialButton10 = onView(
            allOf(
                withId(R.id.button_multiply), withText("×"),
                childAtPosition(
                    childAtPosition(
                        withClassName(`is`("android.widget.TableLayout")),
                        1
                    ),
                    3
                ),
                isDisplayed()
            )
        )
        materialButton10.perform(click())

        val materialButton11 = onView(
            allOf(
                withId(R.id.button_8), withText("8"),
                childAtPosition(
                    childAtPosition(
                        withClassName(`is`("android.widget.TableLayout")),
                        1
                    ),
                    1
                ),
                isDisplayed()
            )
        )
        materialButton11.perform(click())

        val materialButton12 = onView(
            allOf(
                withId(R.id.button_equals), withText("="),
                childAtPosition(
                    childAtPosition(
                        withClassName(`is`("android.widget.TableLayout")),
                        4
                    ),
                    2
                ),
                isDisplayed()
            )
        )
        materialButton12.perform(click())

        val textView5 = onView(
            allOf(
                withId(R.id.input), withText("2×8"),
                withParent(withParent(IsInstanceOf.instanceOf(android.widget.LinearLayout::class.java))),
                isDisplayed()
            )
        )
        textView5.check(matches(withText("2×8")))

        val textView6 = onView(
            allOf(
                withId(R.id.output), withText("16"),
                withParent(withParent(IsInstanceOf.instanceOf(android.widget.LinearLayout::class.java))),
                isDisplayed()
            )
        )
        textView6.check(matches(withText("16")))
    }

    @Test
    fun testFour() {
        val materialButton13 = onView(
            allOf(
                withId(R.id.button_2), withText("2"),
                childAtPosition(
                    childAtPosition(
                        withClassName(`is`("android.widget.TableLayout")),
                        3
                    ),
                    1
                ),
                isDisplayed()
            )
        )
        materialButton13.perform(click())

        val materialButton14 = onView(
            allOf(
                withId(R.id.button_5), withText("5"),
                childAtPosition(
                    childAtPosition(
                        withClassName(`is`("android.widget.TableLayout")),
                        2
                    ),
                    1
                ),
                isDisplayed()
            )
        )
        materialButton14.perform(click())

        val materialButton15 = onView(
            allOf(
                withId(R.id.button_division), withText("÷"),
                childAtPosition(
                    childAtPosition(
                        withClassName(`is`("android.widget.TableLayout")),
                        0
                    ),
                    3
                ),
                isDisplayed()
            )
        )
        materialButton15.perform(click())

        val materialButton16 = onView(
            allOf(
                withId(R.id.button_5), withText("5"),
                childAtPosition(
                    childAtPosition(
                        withClassName(`is`("android.widget.TableLayout")),
                        2
                    ),
                    1
                ),
                isDisplayed()
            )
        )
        materialButton16.perform(click())

        val materialButton17 = onView(
            allOf(
                withId(R.id.button_equals), withText("="),
                childAtPosition(
                    childAtPosition(
                        withClassName(`is`("android.widget.TableLayout")),
                        4
                    ),
                    2
                ),
                isDisplayed()
            )
        )
        materialButton17.perform(click())

        val textView7 = onView(
            allOf(
                withId(R.id.input), withText("25÷5"),
                withParent(withParent(IsInstanceOf.instanceOf(android.widget.LinearLayout::class.java))),
                isDisplayed()
            )
        )
        textView7.check(matches(withText("25÷5")))

        val textView8 = onView(
            allOf(
                withId(R.id.output), withText("5"),
                withParent(withParent(IsInstanceOf.instanceOf(android.widget.LinearLayout::class.java))),
                isDisplayed()
            )
        )
        textView8.check(matches(withText("5")))
    }

    @Test
    fun testFive() {
        val materialButton18 = onView(
            allOf(
                withId(R.id.button_subtraction), withText("-"),
                childAtPosition(
                    childAtPosition(
                        withClassName(`is`("android.widget.TableLayout")),
                        2
                    ),
                    3
                ),
                isDisplayed()
            )
        )
        materialButton18.perform(click())

        val materialButton19 = onView(
            allOf(
                withId(R.id.button_3), withText("3"),
                childAtPosition(
                    childAtPosition(
                        withClassName(`is`("android.widget.TableLayout")),
                        3
                    ),
                    2
                ),
                isDisplayed()
            )
        )
        materialButton19.perform(click())

        val materialButton20 = onView(
            allOf(
                withId(R.id.button_dot), withText("."),
                childAtPosition(
                    childAtPosition(
                        withClassName(`is`("android.widget.TableLayout")),
                        4
                    ),
                    1
                ),
                isDisplayed()
            )
        )
        materialButton20.perform(click())

        val materialButton21 = onView(
            allOf(
                withId(R.id.button_5), withText("5"),
                childAtPosition(
                    childAtPosition(
                        withClassName(`is`("android.widget.TableLayout")),
                        2
                    ),
                    1
                ),
                isDisplayed()
            )
        )
        materialButton21.perform(click())

        val materialButton22 = onView(
            allOf(
                withId(R.id.button_addition), withText("+"),
                childAtPosition(
                    childAtPosition(
                        withClassName(`is`("android.widget.TableLayout")),
                        3
                    ),
                    3
                ),
                isDisplayed()
            )
        )
        materialButton22.perform(click())

        val materialButton23 = onView(
            allOf(
                withId(R.id.button_4), withText("4"),
                childAtPosition(
                    childAtPosition(
                        withClassName(`is`("android.widget.TableLayout")),
                        2
                    ),
                    0
                ),
                isDisplayed()
            )
        )
        materialButton23.perform(click())

        val materialButton24 = onView(
            allOf(
                withId(R.id.button_equals), withText("="),
                childAtPosition(
                    childAtPosition(
                        withClassName(`is`("android.widget.TableLayout")),
                        4
                    ),
                    2
                ),
                isDisplayed()
            )
        )
        materialButton24.perform(click())

        val textView9 = onView(
            allOf(
                withId(R.id.input), withText("-3.5+4"),
                withParent(withParent(IsInstanceOf.instanceOf(android.widget.LinearLayout::class.java))),
                isDisplayed()
            )
        )
        textView9.check(matches(withText("-3.5+4")))

        val textView10 = onView(
            allOf(
                withId(R.id.output), withText("0.5"),
                withParent(withParent(IsInstanceOf.instanceOf(android.widget.LinearLayout::class.java))),
                isDisplayed()
            )
        )
        textView10.check(matches(withText("0.5")))
    }

    @Test
    fun testSix() {
        val materialButton25 = onView(
            allOf(
                withId(R.id.button_2), withText("2"),
                childAtPosition(
                    childAtPosition(
                        withClassName(`is`("android.widget.TableLayout")),
                        3
                    ),
                    1
                ),
                isDisplayed()
            )
        )
        materialButton25.perform(click())

        val materialButton26 = onView(
            allOf(
                withId(R.id.button_5), withText("5"),
                childAtPosition(
                    childAtPosition(
                        withClassName(`is`("android.widget.TableLayout")),
                        2
                    ),
                    1
                ),
                isDisplayed()
            )
        )
        materialButton26.perform(click())

        val materialButton27 = onView(
            allOf(
                withId(R.id.button_subtraction), withText("-"),
                childAtPosition(
                    childAtPosition(
                        withClassName(`is`("android.widget.TableLayout")),
                        2
                    ),
                    3
                ),
                isDisplayed()
            )
        )
        materialButton27.perform(click())

        val materialButton28 = onView(
            allOf(
                withId(R.id.button_2), withText("2"),
                childAtPosition(
                    childAtPosition(
                        withClassName(`is`("android.widget.TableLayout")),
                        3
                    ),
                    1
                ),
                isDisplayed()
            )
        )
        materialButton28.perform(click())

        val materialButton29 = onView(
            allOf(
                withId(R.id.button_7), withText("7"),
                childAtPosition(
                    childAtPosition(
                        withClassName(`is`("android.widget.TableLayout")),
                        1
                    ),
                    0
                ),
                isDisplayed()
            )
        )
        materialButton29.perform(click())

        val materialButton30 = onView(
            allOf(
                withId(R.id.button_dot), withText("."),
                childAtPosition(
                    childAtPosition(
                        withClassName(`is`("android.widget.TableLayout")),
                        4
                    ),
                    1
                ),
                isDisplayed()
            )
        )
        materialButton30.perform(click())

        val materialButton31 = onView(
            allOf(
                withId(R.id.button_2), withText("2"),
                childAtPosition(
                    childAtPosition(
                        withClassName(`is`("android.widget.TableLayout")),
                        3
                    ),
                    1
                ),
                isDisplayed()
            )
        )
        materialButton31.perform(click())

        val materialButton32 = onView(
            allOf(
                withId(R.id.button_equals), withText("="),
                childAtPosition(
                    childAtPosition(
                        withClassName(`is`("android.widget.TableLayout")),
                        4
                    ),
                    2
                ),
                isDisplayed()
            )
        )
        materialButton32.perform(click())

        val textView11 = onView(
            allOf(
                withId(R.id.input), withText("25-27.2"),
                withParent(withParent(IsInstanceOf.instanceOf(android.widget.LinearLayout::class.java))),
                isDisplayed()
            )
        )
        textView11.check(matches(withText("25-27.2")))

        val textView12 = onView(
            allOf(
                withId(R.id.output), withText("-2.2"),
                withParent(withParent(IsInstanceOf.instanceOf(android.widget.LinearLayout::class.java))),
                isDisplayed()
            )
        )
        textView12.check(matches(withText("-2.2")))
    }

    @Test
    fun testSeven() {
        val materialButton33 = onView(
            allOf(
                withId(R.id.button_6), withText("6"),
                childAtPosition(
                    childAtPosition(
                        withClassName(`is`("android.widget.TableLayout")),
                        2
                    ),
                    2
                ),
                isDisplayed()
            )
        )
        materialButton33.perform(click())

        val materialButton34 = onView(
            allOf(
                withId(R.id.button_6), withText("6"),
                childAtPosition(
                    childAtPosition(
                        withClassName(`is`("android.widget.TableLayout")),
                        2
                    ),
                    2
                ),
                isDisplayed()
            )
        )
        materialButton34.perform(click())

        val materialButton35 = onView(
            allOf(
                withId(R.id.button_6), withText("6"),
                childAtPosition(
                    childAtPosition(
                        withClassName(`is`("android.widget.TableLayout")),
                        2
                    ),
                    2
                ),
                isDisplayed()
            )
        )
        materialButton35.perform(click())

        val materialButton36 = onView(
            allOf(
                withId(R.id.button_6), withText("6"),
                childAtPosition(
                    childAtPosition(
                        withClassName(`is`("android.widget.TableLayout")),
                        2
                    ),
                    2
                ),
                isDisplayed()
            )
        )
        materialButton36.perform(click())

        val materialButton37 = onView(
            allOf(
                withId(R.id.button_6), withText("6"),
                childAtPosition(
                    childAtPosition(
                        withClassName(`is`("android.widget.TableLayout")),
                        2
                    ),
                    2
                ),
                isDisplayed()
            )
        )
        materialButton37.perform(click())

        val materialButton38 = onView(
            allOf(
                withId(R.id.button_multiply), withText("×"),
                childAtPosition(
                    childAtPosition(
                        withClassName(`is`("android.widget.TableLayout")),
                        1
                    ),
                    3
                ),
                isDisplayed()
            )
        )
        materialButton38.perform(click())

        val materialButton39 = onView(
            allOf(
                withId(R.id.button_9), withText("9"),
                childAtPosition(
                    childAtPosition(
                        withClassName(`is`("android.widget.TableLayout")),
                        1
                    ),
                    2
                ),
                isDisplayed()
            )
        )
        materialButton39.perform(click())

        val materialButton40 = onView(
            allOf(
                withId(R.id.button_9), withText("9"),
                childAtPosition(
                    childAtPosition(
                        withClassName(`is`("android.widget.TableLayout")),
                        1
                    ),
                    2
                ),
                isDisplayed()
            )
        )
        materialButton40.perform(click())

        val materialButton41 = onView(
            allOf(
                withId(R.id.button_9), withText("9"),
                childAtPosition(
                    childAtPosition(
                        withClassName(`is`("android.widget.TableLayout")),
                        1
                    ),
                    2
                ),
                isDisplayed()
            )
        )
        materialButton41.perform(click())

        val materialButton42 = onView(
            allOf(
                withId(R.id.button_9), withText("9"),
                childAtPosition(
                    childAtPosition(
                        withClassName(`is`("android.widget.TableLayout")),
                        1
                    ),
                    2
                ),
                isDisplayed()
            )
        )
        materialButton42.perform(click())

        val materialButton43 = onView(
            allOf(
                withId(R.id.button_9), withText("9"),
                childAtPosition(
                    childAtPosition(
                        withClassName(`is`("android.widget.TableLayout")),
                        1
                    ),
